[tool.poetry]
name = "update-slack-workflow-status-action"
version = "0.1.0"
description = "A Github action to update workflow statuses"
authors = ["Thomas Thorogood <goodtom@uw.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.6.1"
slack-sdk = "^3.5.0"
pydantic = "^1.8.1"
pytz = "^2021.1"
inflection = "^0.5.1"
devtools = "^0.6.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
